--- a/app/views/subscribem/accounts/new.html.erb
+++ b/app/views/subscribem/accounts/new.html.erb
@@ -4,5 +4,23 @@
 		<%= account.label :name %><br>
 		<%= account.text_field :name %>
 	</p>
+
+	<%= account.fields_for :owner %>
+
+	<p>
+		<%= owner.label :email %>
+		<%= owner.text_field :email %>
+	</p>
+
+	<p>
+		<%= owner.label :password %>
+		<%= owner.password_field :password %>
+	</p>
+
+	<p>
+		<%= owner.label :password_confirmation %>
+		<%= owner.password_field :password_confirmation %>
+	</p>
+
 	<%= account.submit %>
 <% end %>
